j11 adjustments